# shimmer

./: .gitmodules  Dockerfile  LICENSE.md  README.md
.github/workflows/: cmake-single-platform.yml
AGA8CODE/: .gitignore  CMakeLists.txt
AGA8CODE/cmake/: SHMGERGConfig.cmake.in
AGA8CODE/src/: CMakeLists.txt  shimmer_gerg_concepts.hpp  shimmer_gerg_data.hpp  shimmer_gerg_functions.cpp  shimmer_gerg_functions.hpp  shimmer_gerg_utilities.hpp  shimmer_teqp_concepts.hpp  shimmer_teqp_utilities.hpp
AGA8CODE/src/GERG/: GERG2008.cpp  GERG2008.h
AGA8CODE/unit_tests/: CMakeLists.txt  main.cpp  test_filter_collection.hpp  test_filter_components.hpp  test_gerg_mock.hpp  test_pseudo_critical_point.hpp  test_reducing_parameters.hpp  test_thermodynamic_properties.hpp  test_utilities.hpp
GERG/: .gitignore  CMakeLists.txt
GERG/cmake/: GERGConfig.cmake.in
GERG/src/: CMakeLists.txt  CommonUtilities.cpp  CommonUtilities.hpp  GERG_functions.hpp  MATLAB_GERG_functions.hpp  MATLAB_GERG_interface.cpp  MATLAB_GERG_interface.hpp  Matlab_interface.cpp  Matlab_interface.hpp
GERG/unit_tests/: CMakeLists.txt  main.cpp  test_GERG.hpp  test_GERG_2.hpp  test_matlab_interface.hpp  test_pseudo_critical_point.hpp  test_reducing_parameters.hpp  test_thermodynamic_properties.hpp  test_utilities.hpp  x_mock.hpp
Test Case 1/input/: .~lock.profiles.xlsx#  topology.xlsx
doc/: Model-Shimmer_ver2023-07-12.pptx  PROPOSAL_important_pages  matlab_comments.txt
doc/Nonpipe-NODE/: Shimmer_NODAL non pipes BC.xlsx
handbook/: biblio.bib  data_files.tex  handbook.tex  installation.tex  intro.tex  macros.tex  memory_representation.tex  model_description.tex  numerical_methods  numerical_methods.tex  usage.tex
handbook/img_memory/: pipe_network_pgf.tex  stations.tex
handbook/img_methods/: fluid_system.tex  numerical_methods_algorithm_pgf.tex
matlab/Compressor/: testCase_1.pptx
matlab/Initial_code/: A__GRID_CREATOR.m  A__Model.m  AlpharGERG.m  DATA_INPUT_Trial2023_3.mat  INPUT_Pambour1.xlsx  MASS2MOL_CONV3.m  MASS_HV.m  MolarMassGERG.m  PseudoCriticalPointGERG.m  ReducingParametersGERG.m  Tc.mat  Trial2023_2_G0.mat  Viscositycalculator.m  doik.mat  fij.mat  gijk.mat  kexp.mat  kpolij.mat  lambda.m  nijk.mat  setupGERG2.m  tijk.mat  toik.mat  x.mat
matlab/Mod_SHIMM_v01/: A__GRID_CREATOR.m  A__Model.m  Alpha0GERG.m  DATA_INPUT_Trial2023.mat  Dc.mat  DensityGERG.m  Frictionfactoraverage.m  MASS2MOL_CONV.m  MMiGERG.mat  MOL2MASS_CONV.m  MOL2MASS_CONV3.m  MolarMassGERG1.m  MolarMassGERG2.m  MolarMassGERG3.m  PressureGERG.m  PropertiesGERG.m  Resistance.m  ReynoldsNum.m  (+30 more)
shimmer++/: BUILD.txt  CMakeLists.txt
shimmer++/share/: shimmer_config.lua
shimmer++/src/: assemble.cpp  assemble.h  boundary.cpp  boundary.h  conservation_matrices.cpp  conservation_matrices.h  errors.h  fluid_solver.cpp  fluid_solver.h  friction_factor.cpp  friction_factor.h  gas_law.cpp  gas_law.h  geometry_properties.cpp  geometry_properties.h  incidence_matrix.cpp  incidence_matrix.h  infrastructure_graph.cpp  infrastructure_graph.h  main.cpp  matlab_manip.cpp  matlab_manip.h  matrix_manipulations.cpp  matrix_manipulations.h  network_elements.h  nonpipe_at_edges.h  nonpipe_at_edges_alternative.h  nonpipe_over_edges.cpp  nonpipe_over_edges.h  pipe_calculator.cpp  pipe_calculator.h  solver_guimain.cpp  solver_main.cpp  sqlite.cpp  sqlite.hpp  sqlite_conspoint_wo.cpp  sqlite_conspoint_wo.h  sqlite_entry_p_reg.cpp  sqlite_injection_w.cpp  sqlite_injection_w.h  (+12 more)
shimmer++/src/gerg/: shimmer_gerg_data.hpp  shimmer_gerg_functions.cpp  shimmer_gerg_functions.hpp  shimmer_gerg_utilities.cpp  shimmer_gerg_utilities.hpp
shimmer++/src/gerg/GERG/: GERG2008.cpp  GERG2008.h
shimmer++/src/gui/: CShimmerMainWindow.cpp  CShimmerMainWindow.h
shimmer++/src/infra/: infrastructure.cpp  infrastructure.h  launch_solver.cpp  launch_solver.h
shimmer++/src/solver/: boundary.cpp  boundary.h  conservation_matrices.cpp  conservation_matrices.h  fluid_solver.cpp  fluid_solver.h  gas_law.cpp  gas_law.h  geometry_properties.cpp  incidence_matrix.cpp  incidence_matrix.h  matlab_manip.cpp  matlab_manip.h  matrix_manipulations.cpp  nonpipe_over_edges.cpp  nonpipe_over_edges.h  pipe_calculator.cpp  quality_tracking_solver.h  time_solver.h  variable.cpp
shimmer++/src/sqlite/: sqlite.cpp  sqlite.hpp  sqlite_compressor.cpp  sqlite_compressor.h  sqlite_entry_l_reg.cpp  sqlite_entry_l_reg.h  sqlite_entry_p_reg.cpp  sqlite_entry_p_reg.h  sqlite_exit_l_reg.cpp  sqlite_exit_l_reg.h  sqlite_gases.cpp  sqlite_gases.h  sqlite_infra.cpp  sqlite_infra.h  sqlite_initial_conditions.cpp  sqlite_initial_conditions.h  sqlite_outlet.cpp  sqlite_outlet.h  sqlite_pipe.cpp  sqlite_pipe.h  sqlite_qualitytracking.cpp  sqlite_qualitytracking.h  sqlite_reduction.cpp  sqlite_reduction.h
shimmer++/src/utils/: CMakeLists.txt  load_database.cpp  populate_test_db.cpp  testprepro.cpp
shimmer++/unit_tests/: CMakeLists.txt  gsnam.txt  gsnam_compressor.txt  gsnam_non_pipe.txt  populate_test_db.cpp  test_assembler.cpp  test_compressor.cpp  test_conservation_matrices.cpp  test_conservation_system.cpp  test_fluid_solver.cpp  test_friction_factor.cpp  test_geometry.cpp  test_incidence_matrix.cpp  test_mean_pressure.cpp  test_non-pipe_at_nodes.cpp  test_non-pipe_at_nodes_withdb.cpp  test_resistances.cpp  test_speed_of_sound.cpp  test_sqlite_import.cpp  test_stations.cpp  test_time_cycle.cpp  verify_test.cpp  verify_test.h
sqlite/: CMakeLists.txt  TestCase1_compressor.sql  main.cpp  shimmer.sql  test_network_1.sql
teqp_example/: .gitignore  CMakeLists.txt  main.cpp  shimmer_teqp_utilities.hpp
teqp_example/cmake/: SHMTEQPConfig.cmake.in
teqp_example/src/: CMakeLists.txt  shimmer_gerg_data.hpp  shimmer_gerg_functions.hpp  shimmer_teqp_utilities.hpp
teqp_example/src/GERG/: CMakeLists.txt  GERG2008.cpp  GERG2008.h
teqp_example/unit_tests/: CMakeLists.txt  main.cpp  test_filter_collection.hpp  test_filter_components.hpp  test_gerg_mock.hpp  test_pseudo_critical_point.hpp  test_reducing_parameters.hpp  test_temp.hpp  test_temp_2.hpp  test_thermodynamic_properties.hpp  test_utilities.hpp
(+127 files in other folders)
